[addons] move kodi's addon instance classes to a own folder
This moves parts from addon instances in Kodi to a own folder to have
equal with the dev kit include structure.

--- a/xbmc/addons/interfaces/kodi/addon-instance/CMakeLists.txt
+++ b/xbmc/addons/interfaces/kodi/addon-instance/CMakeLists.txt
@@ -1,5 +1,13 @@
-set(SOURCES Screensaver.cpp)
+set(SOURCES AudioDecoder.cpp
+            AudioEncoder.cpp
+            ImageDecoder.cpp
+            Screensaver.cpp
+            VFSEntry.cpp)
 
-set(HEADERS Screensaver.h)
+set(HEADERS AudioDecoder.h
+            AudioEncoder.h
+            ImageDecoder.h
+            Screensaver.h
+            VFSEntry.h)
 
 core_add_library(addonInterface_kodi_addon_instance)
