[addons] add all general callbacks present on old to new

--- a/xbmc/addons/interfaces/kodi/CMakeLists.txt
+++ b/xbmc/addons/interfaces/kodi/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SOURCES General.cpp
             AudioEngine.cpp
-            Filesystem.cpp)
+            Filesystem.cpp
+            Network.cpp)
 
 set(HEADERS General.h
             AudioEngine.h
-            Filesystem.h)
+            Filesystem.h
+            Network.h)
 
 include_directories(${CORE_SOURCE_DIR}/xbmc/addons/kodi-addon-dev-kit/include)
 
